# self-evolving-multi-agent-system-for-geo-regulation

./: .gitignore  README.md  geoflow_agent.py  geoflow_subagent.py  langgraph.json  multi-agent.py  pyproject.toml  requirements.txt
config/: agent_config.py  agents.yaml
deep-agents-ui/src/app/: layout.tsx
deep-agents-ui/src/app/components/ChatInterface/: ChatInterface.tsx
deep-agents-ui/src/app/hooks/: useChat.ts
deepagents/: model.py  sub_agent.py  tools.py
src/: agent_factory.py  tools.py
