[project]
name = "tiktech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentic-doc>=0.3.0",
    "chromadb>=1.0.20",
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.0.10",
    "langchain-openai>=0.3.32",
    "mistralai>=1.9.9",
    "openai>=1.102.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.0",
    "tenacity>=9.1.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["deepagents*"]

[tool.setuptools.package-data]
"*" = ["**/*"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
