[project]
name = "tiktech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agentic-doc",
    "chromadb",
    "google-generativeai",
    "ipykernel",
    "langchain",
    "langchain-chroma",
    "langchain-community",
    "langchain-core",
    "langchain-experimental",
    "langchain-google-genai",
    "langchain-openai",
    "langgraph",
    "mistralai",
    "openai",
    "pydantic",
    "python-dotenv>=1.1.1",
    "rank-bm25",
    "requests",
    "sentence-transformers",
    "tavily-python",
    "tenacity",
    "torch",
    "torchvision",
    "typing-extensions",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["deepagents*"]

[tool.setuptools.package-data]
"*" = ["**/*"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
